# detectParking

./: CMakeLists.txt  README.md
cpp/: ConfigLoad.cpp  ConfigLoad.h  Parking.cpp  Parking.h  main.cpp  meson.build  utils.cpp  utils.h
datasets/: parkinglot_1.txt  parkinglot_2.txt
